--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -47,16 +47,17 @@ p {
   display: block;
   width: max-content;
   text-decoration: none;
+  max-height: fit-content;
   color: inherit;
   padding: 0.5rem 1rem;
   background: var(--foreground-color);
   color: var(--background-color);
   border-radius: 9999px;
-  margin-top: 1rem;
+  grid-column: 2;
 }
 
 .ProseMirror {
-  @apply bg-gray-200 p-2 w-full block whitespace-pre-wrap relative focus-visible:outline-hidden;
+  @apply p-2 block whitespace-pre-wrap relative focus-visible:outline-hidden;
 }
 
 /* See https://github.com/adobe-fonts/adobe-blank-vf */
@@ -64,4 +65,44 @@ p {
   font-family: AdobeBlack;
   src: url(/fonts/AdobeBlackVF.woff2) format(truetype);
   font-display: fallback;
+}
+
+.axis-input {
+  @apply text-xs py-1;
+  display: grid;
+  grid-template-columns: 2.5rem 2rem 1fr 2rem 2rem;
+  gap: 1rem;
+  padding-inline-end: 1rem;
+}
+
+#download {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 1rem;
+  padding-block: 1rem;
+}
+
+@media only screen and (max-width: 700px) {
+  #download {
+    display: flex;
+    flex-direction: column;
+  }
+}
+
+.card {
+  padding: 1rem;
+  box-shadow: 0px 0px 0.1rem #b0b0b0;
+  border-radius: 1rem;
+}
+
+.unicode-character {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 0.1rem;
+  font-size: 0.7rem;
+  & > :nth-child(2) {
+    font-size: 0.5rem;
+    height: 20px;
+  }
 }
