--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,4 +1,4 @@
-@layer theme, base, components, utilities;
+@layer reset, theme, base, components, utilities;
 @import 'tailwindcss/theme.css' layer(theme);
 @import 'tailwindcss/utilities.css' layer(utilities);
 
@@ -56,10 +56,6 @@ p {
   grid-column: 2;
 }
 
-.ProseMirror {
-  @apply p-2 block whitespace-pre-wrap relative focus-visible:outline-hidden;
-}
-
 /* See https://github.com/adobe-fonts/adobe-blank-vf */
 @font-face {
   font-family: AdobeBlack;
@@ -95,14 +91,6 @@ p {
   border-radius: 1rem;
 }
 
-.unicode-character {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  gap: 0.1rem;
-  font-size: 0.7rem;
-  & > :nth-child(2) {
-    font-size: 0.5rem;
-    height: 20px;
-  }
+[role='separator'][aria-orientation='vertical'] {
+  margin-inline: 1rem;
 }
